# Translator

./: .gitignore  .gitmodules  AdditionalContext.hpp  CMakeLists.txt  InstructionBuilder.hpp  OperandsRelation.hpp  PE64Processing.cpp  PE64Processing.hpp  ProxyFunction.cpp  ProxyFunction.hpp  Utils.hpp  main.cpp  vcpkg.json
Function/: Function32.cpp  Function32.hpp  Function64.cpp  Function64.hpp
Handlers/: AddTranslationHandler.hpp  CallTranslationHandler.hpp  DetermineOperandsRelationHandler.hpp  InstructionToTextHandler.hpp  InstructionTranslationHandler.hpp  LeaTranslationHandler.hpp  MovHandler.hpp  MovTranslationHandler.hpp  RegisterDownArchitectureHandler.hpp  RetTranslationHandler.hpp  SubTranslationHandler.hpp  XorTranslationHandler.hpp
Requestor/: Requestor.hpp
Requests/: AddTranslationRequest.hpp  CallTranslationRequest.hpp  DetermineOperandsRelationRequest.hpp  InstructionToTextRequest.hpp  InstructionTranslationRequest.hpp  LeaTranslationRequest.hpp  MovTranslationRequest.hpp  RegisterDownArchitectureRequest.hpp  RetTranslationRequest.hpp  SubTranslationRequest.hpp  XorTranslationRequest.hpp
tests/: build.bat  build.ps1  build.sh  build_tests.py  generate_cpp_test.py  generate_cpp_test_include.py  test2.asm  test3.asm  to_hex.py
tests/AssemblyPrograms/: test1.asm
tests/C/: test1.c  test2.c  test3.c  test4.c  test5.c
tests/asm/: test1.asm  test10.asm  test11.asm  test12.asm  test13.asm  test14.asm  test15.asm  test16.asm  test17.asm  test18.asm  test19.asm  test2.asm  test4.asm  test5.asm  test6.asm  test7.asm  test8.asm
tests/cpp/: mini_prog1.hpp  test1.hpp  test10.hpp  test11.hpp  test111.hpp  test12.hpp  test13.hpp  test14.hpp  test15.hpp  test16.hpp  test17.hpp  test18.hpp  test19.hpp  test2.hpp  test3.hpp  test4.hpp  test5.hpp  test6.hpp  test7.hpp  test8.hpp  test9.hpp  tests.hpp
